--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,33 +1,42 @@
 name: Build
 
 on:
-  push:
+    push:
 
 jobs:
-  build:
-    name: ${{ matrix.name }}
-    runs-on: ${{ matrix.os }}
+    build:
+        name: ${{ matrix.name }}
+        runs-on: ${{ matrix.os }}
 
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - name: Linux
-            os: ubuntu-latest
-            platform: linux
-          - name: Windows
-            os: windows-latest
-            platform: win
+        strategy:
+            fail-fast: false
+            matrix:
+                include:
+                    - name: Linux
+                      os: ubuntu-latest
+                      platform: linux
+                    - name: Windows
+                      os: windows-latest
+                      platform: win
 
-    steps:
-      - name: Checkout Project
-        uses: actions/checkout@v6
-        with:
-          submodules: 'recursive'
+        steps:
+            - name: Checkout Project
+              uses: actions/checkout@v6
+              with:
+                  submodules: "recursive"
 
-      - name: CMake
-        run: |
-          mkdir build
-          cd build
-          cmake ..
-          cmake --build .
+            - name: CMake Configure
+              run: |
+                  mkdir build
+                  cmake -S . -B ./build
+
+            - name: Linux Build
+              if: matrix.platform == 'linux'
+              run: make -C build
+
+            - name: Windows Build
+              if: matrix.platform == 'win'
+              run: |
+                  cd build
+                  msbuild snivy.vcxproj
+
