--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,19 +5,8 @@ on:
 
 jobs:
     build:
-        name: ${{ matrix.name }}
-        runs-on: ${{ matrix.os }}
-
-        strategy:
-            fail-fast: false
-            matrix:
-                include:
-                    - name: Linux
-                      os: ubuntu-latest
-                      platform: linux
-                    - name: Windows
-                      os: windows-latest
-                      platform: win
+        name: Build Game
+        runs-on: ubuntu-latest
 
         steps:
             - name: Checkout Project
@@ -25,22 +14,17 @@ jobs:
               with:
                   submodules: "recursive"
 
-            - name: CMake Configure
+            - name: "Install dependencies"
+              run: |
+                  sudo apt-get update -y
+                  sudo apt-get install -y \
+                    gnome-desktop-testing libasound2-dev libpulse-dev libaudio-dev libjack-dev libsndio-dev \
+                    libusb-1.0-0-dev libx11-dev libxext-dev libxrandr-dev libxcursor-dev libxfixes-dev libxi-dev \
+                    libxss-dev libxtst-dev libwayland-dev libxkbcommon-dev libdrm-dev libgbm-dev libgl1-mesa-dev \
+                    libgles2-mesa-dev libegl1-mesa-dev libdbus-1-dev libibus-1.0-dev libudev-dev fcitx-libs-dev
+
+            - name: CMake Build
               run: |
                   mkdir build
                   cmake -S . -B ./build -DSDL_UNIX_CONSOLE_BUILD=ON
-
-            - name: Linux Build
-              if: matrix.platform == 'linux'
-              run: make -C build
-
-            - name: Add msbuild to PATH
-              if: matrix.platform == 'win'
-              uses: microsoft/setup-msbuild@v2
-
-            - name: Windows Build
-              if: matrix.platform == 'win'
-              run: |
-                  cd build
-                  msbuild.exe snivy.vcxproj
-
+                  make -C build
