--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,10 @@ name: Build
 
 on:
     push:
+        branches:
+            - master
+    pull_request:
+    workflow_dispatch:
 
 jobs:
     build:
@@ -28,3 +32,10 @@ jobs:
                   mkdir build
                   cmake -S . -B ./build -DSDL_UNIX_CONSOLE_BUILD=ON
                   make -C build
+
+            - name: Upload Artifact
+              uses: actions/upload-artifact@v6
+              with:
+                  name: linux-build
+                  path: build/snivy
+
