--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "external/libanm2"]
 	path = external/libanm2
 	url = https://github.com/shweetsstuff/libanm2
+[submodule "external/physfs"]
+	path = external/physfs
+	url = https://github.com/icculus/physfs
