vscode tasks, build settings, etc.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,28 +1,61 @@
 {
-    "version": "0.2.0",
-    "configurations": [
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Debug (CMake Debug preset)",
+      "type": "cppdbg",
+      "request": "launch",
+      "preLaunchTask": "cmake: build debug",
+      "program": "${workspaceFolder}/out/build/linux-debug/bin/Debug/snivy",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}/out/build/linux-debug",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "miDebuggerPath": "/usr/bin/gdb",
+      "setupCommands": [
         {
-            "name": "Debug",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/build/snivy",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/build",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "miDebuggerPath": "/usr/bin/gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing"
-                },
-                {
-                    "description": "Set disassembly flavor to Intel",
-                    "text": "-gdb-set disassembly-flavor intel"
-                }
-            ]
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing"
         },
-    ]
+        {
+          "description": "Set disassembly flavor to Intel",
+          "text": "-gdb-set disassembly-flavor intel"
+        }
+      ],
+      "windows": {
+        "type": "cppvsdbg",
+        "program": "${workspaceFolder}/out/build/x64-Debug/bin/Debug/snivy.exe",
+        "cwd": "${workspaceFolder}/out/build/x64-Debug"
+      }
+    },
+    {
+      "name": "Run (CMake Release preset)",
+      "type": "cppdbg",
+      "request": "launch",
+      "noDebug": true,
+      "preLaunchTask": "cmake: build release",
+      "program": "${workspaceFolder}/out/build/linux-release/bin/Release/snivy",
+      "args": [],
+      "cwd": "${workspaceFolder}/out/build/linux-release",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "miDebuggerPath": "/usr/bin/gdb",
+      "windows": {
+        "type": "cppvsdbg",
+        "program": "${workspaceFolder}/out/build/x64-Release/bin/Release/snivy.exe",
+        "cwd": "${workspaceFolder}/out/build/x64-Release"
+      }
+    },
+    {
+      "name": "Web (Emscripten + Chromium)",
+      "type": "node-terminal",
+      "request": "launch",
+      "preLaunchTask": "web: run",
+      "command": "echo \"Web task complete. If Chromium did not open, run task: web: open chromium\"",
+      "cwd": "${workspaceFolder}"
+    }
+  ]
 }
